--- a/style.css
+++ b/style.css
@@ -17,6 +17,11 @@ body {
   margin: 0 auto;
   padding-top: 4rem;
 }
+@media screen and (max-width: 600px) {
+  .container {
+    padding: 2rem 1rem;
+  }
+}
 .container h1 {
   color: purple;
   text-transform: uppercase;
