--- a/style.scss
+++ b/style.scss
@@ -12,10 +12,18 @@ body {
   font-size: 1.6rem;
 }
 
+
+
 .container {
   max-width: 60rem;
   margin: 0 auto;
   padding-top: 4rem;
+
+  @media screen and (max-width: 600px) {
+    padding: 2rem 1rem;
+
+
+  }
 
   h1 {
     color: purple;
